--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "node build.js",
-    "deploy": "npm run build && cd mysite && firebase deploy --project diaweb-backend"
+    "deploy": "npm run build && firebase deploy --project diaweb-backend"
   },
   "dependencies": {
     "dotenv": "^16.4.5"
