--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
       {
-        "src": "path/to/your/wsgi.py",
+        "src": "mysite/mysite/wsgi.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "path/to/your/wsgi.py"
+        "dest": "mysite/mysite/wsgi.py"
       }
     ]
   }
