--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
     "builds": [
       {
         "src": "mysite/mysite/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+          "runtime": "python3.10"
+        }
       }
     ],
     "routes": [
