max lambda size added

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
         "src": "mysite/mysite/wsgi.py",
         "use": "@vercel/python",
         "config": {
-          "runtime": "python3.10"
+          "runtime": "python3.10",
+          "maxLambdaSize": "15mb"
         }
       }
     ],
