change to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
         "src": "mysite/mysite/wsgi.py",
         "use": "@vercel/python",
         "config": {
-          "runtime": "python3.10",
-          "maxLambdaSize": "15mb"
+          "runtime": "python3.10"
         }
       }
     ],
