--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,3 +23,9 @@ jobs:
     - name: Run tests
       run: |
         cd mysite && python manage.py test --keepdb
+      env:
+        DB_NAME: postgres
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_PORT: ${{ secrets.DB_PORT }}
