--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,3 +31,4 @@ jobs:
         DB_PORT: ${{ secrets.DB_PORT }}
         BASE_URL: http://127.0.0.1:8000
         FRONTEND_URL: http://localhost:4200
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
