--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,4 +40,5 @@ jobs:
         BASE_URL: http://127.0.0.1:8000
         FRONTEND_URL: http://localhost:4200
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        API_KEY_TEST: ${{ secrets.API_KEY_TEST }}
         
