--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,27 +10,27 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python 3.8
+    - name: Set up Python 3.11.5
       uses: actions/setup-python@v5
       with:
         python-version: 3.11.5
 
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+
+    - name: Configure Poetry
+      run: |
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        poetry config virtualenvs.create false
+        poetry install
 
     - name: Run tests
       run: |
-        cd mysite && python manage.py test --keepdb
+        cd mysite && poetry run python manage.py test --keepdb
       env:
         DB_NAME: postgres
         DB_USER: ${{ secrets.DB_USER }}
