--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,6 +19,13 @@ jobs:
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
 
+    - name: Download model.keras from private repo
+      env:
+        TOKEN: ${{ secrets.MODEL_REPO_TOKEN }}
+      run: |
+        mkdir -p mysite/myapp/keras
+        curl -H "Authorization: token $TOKEN" -L "https://raw.githubusercontent.com/Pablo-Caballero-Maria/DIAWeb-model/main/model.keras" -o mysite/myapp/keras/model.keras
+
     - name: Configure Poetry
       run: |
         echo "$HOME/.local/bin" >> $GITHUB_PATH
