--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,6 @@ dill = "0.3.8"
 django = "5.0"
 django-cors-headers = "4.3.1"
 django-environ = "0.11.2"
-django-ratelimit = "4.1.0"
 djangorestframework = "3.15.1"
 drf-yasg = "1.21.7"
 et-xmlfile = "1.1.0"
@@ -63,7 +62,6 @@ platformdirs = "4.2.2"
 postgrest = "0.16.8"
 proto-plus = "1.23.0"
 protobuf = "4.25.3"
-psycopg2-binary = "2.9.9"
 pyasn1 = "0.6.0"
 pyasn1-modules = "0.4.0"
 pycodestyle = "2.11.1"
@@ -86,7 +84,6 @@ sniffio = "1.3.1"
 sqlparse = "0.4.4"
 storage3 = "0.7.6"
 strenum = "0.4.15"
-supabase = "2.5.0"
 supafunc = "0.4.6"
 tensorboard = "2.16.2"
 tensorboard-data-server = "0.7.2"
@@ -102,6 +99,8 @@ websockets = "12.0"
 werkzeug = "3.0.3"
 wrapt = "1.16.0"
 tensorflow-intel = { version = "^2.16.2", platform = "windows" } # Conditional dependency for Windows
+channels = "^4.1.0"
+daphne = "^4.1.2"
 
 
 [build-system]
