--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,10 @@ wrapt = "1.16.0"
 tensorflow-intel = { version = "^2.16.2", platform = "windows" } # Conditional dependency for Windows
 channels = "^4.1.0"
 daphne = "^4.1.2"
+celery = "^5.4.0"
+redis = "^5.0.7"
+filelock = "^3.15.4"
+channels-redis = "^4.2.0"
 
 
 [build-system]
